[package]
name = "hayspatial"
version = "0.1.2"
edition = "2021"
description = "Spatial econometrics plugin for Hayashi"
license = "MIT"
repository = "https://github.com/sheep-farm/hayspatial"

[lib]
crate-type = ["cdylib"]

[dependencies]
hayashi-plugin-sdk = { git = "https://github.com/sheep-farm/hayashi-plugin-sdk.git", branch = "main" }

[profile.release]
opt-level = 3
lto = true
strip = "symbols"
panic = "abort"
